feat: handler documentation
